# invest-portfolio

./: .gitignore  CHANGELOG.md  CLAUDE.md  LESSONS_LEARNED.md  Makefile  README.md  pyproject.toml
.claude/rules/: architecture.md  data-and-pricing.md  design-handoff.md  domain-ledger.md  engineering-process.md  llm-insight.md  markets-and-fees.md  stack.md
docs/: DEPLOYMENT.md  accounting-formula-manual.en.md  accounting-formula-manual.md  tech-selection-report.md
docs/design/: claude-design-brief-dashboard.md  claude-design-brief-full-app.md  spec-reconciliation-2026-06-13.md
docs/probes/: 2026-06-08-data-source-probe-results.md
docs/reference/: broker-fee-schedules-2026-07.md
docs/reports/: 2026-07-04-assessment-appendix.md  2026-07-04-llm-theme-assessment.md  2026-07-05-ai-input-audit.md  2026-07-05-llm-ignition-plan.md  2026-07-05-llm-ignition-verification.md  2026-07-05-official-template-library-v2.md  2026-07-05-per-market-minispec.html  2026-07-05-per-market-quality-analysis.md  2026-07-05-signals-minispec.html  2026-07-06-ai-assistant-development-blueprint.md  2026-07-06-batch3-sr-and-usability.md  2026-07-06-batch4-news-completion.md  2026-07-06-full-system-deep-review.md  2026-07-06-news-minispec.html  2026-07-08-p1-batch1-minispec.html  2026-07-09-p1-batch2-consensus-minispec.html  2026-07-10-p2-batch1-rules-engine-minispec.html  2026-07-10-p2-batch2-signals-api-minispec.html  2026-07-11-p2-batch3-variable-watchlist-minispec.html  2026-07-12-p3-batch1-notify-minispec.html  2026-07-13-p3-batch2-alerts-v2-minispec.html  2026-07-13-whatsnew-minispec.html  2026-07-14-p3-batch3-digests-fixpack-minispec.md  2026-07-15-fee-engine-v2-minispec.md  2026-07-15-v0119-followups-minispec.md  2026-07-16-v0119-followups-r2-minispec.md  2026-07-17-r3-research-pack.md  2026-07-17-v0119-followups-r3-minispec.md  2026-07-18-multiuser-phase0.md  2026-07-18-prompt-registry.md  2026-07-18-v0119-followups-r4-minispec.md  2026-07-19-v0119-followups-r5-minispec.md  2026-07-19-v0119-followups-r6-minispec.md  2026-07-21-batchA-phase1-plan.md  2026-07-21-batchA-r7-minispec.md
docs/research/: 2026-06-08-finmind-capabilities.md  2026-06-08-schwab-trader-api-capabilities.md
portfolio_dash/: __init__.py  bootstrap.py
portfolio_dash/api/: __init__.py  action_log.py  alert_inputs.py  app.py  auth_store.py  deps.py  digest_service.py  dividend_inbox.py  errors.py  insight_service.py  instrument_service.py  news_service.py  rebates.py  serialize.py  signals_service.py  snapshots.py  wire.py
portfolio_dash/data_ingestion/: agents.py  config_seed.py  csv_import.py  dateparse.py  dividend_import.py  dividend_model.py  fee_overrides.py  fees.py  fx_import.py  fx_lookup.py  holdings.py  import_templates.py  manual.py  markets.py  moomoo_merge.py  opening_import.py  preview.py  register.py  resolve.py  rules_binding.py  schema.py  store.py  validate.py
portfolio_dash/export/: ai_predictions.py  artifact.py  cash_statement.py  holdings.py  holdings_report.py  ledgers.py  ledgers_report.py  realized.py  rebalance_report.py  report_html.py  symbol_detail.py  tax.py  usage.py
portfolio_dash/forex/: __init__.py  fx_pnl.py  pools.py  results.py
portfolio_dash/llm_insight/: __init__.py  alerts_bridge.py  assemble.py  cards.py  composer_store.py  evaluations_store.py  gating.py  generate.py  insights_store.py  master.py  official_templates.py  pipeline_status.py  promote.py  scoring.py  system_prompt.py  variables.py
portfolio_dash/news/: __init__.py  fetcher.py  organizer.py  organizer_prompt.py  pipeline.py  sources.py  store.py
portfolio_dash/ops/: __init__.py  backup.py  digest.py  notify.py  notify_dispatch.py
portfolio_dash/portfolio/: __init__.py  allocation.py  cash.py  cost_basis.py  dashboard.py  dashboard_models.py  dividends.py  external_signals.py  market_view.py  networth.py  pnl.py  results.py  returns.py  technicals.py  timeseries.py  twr.py
portfolio_dash/pricing/: benchmarks.py  board.py  bursa_registry.py  consensus_source.py  datasources_store.py  defaults.py  enums.py  finmind_datasets.py  fred_source.py  index_source.py  ingest.py  names.py  refresh.py  refs.py  registry.py  results.py  schema.py  sentiment_source.py  snapshots_store.py  store.py
portfolio_dash/scheduler/: jobs.py  runtime.py
portfolio_dash/shared/: __init__.py  buildinfo.py  clock.py  config.py  config_store.py  db.py  enums.py  fx.py  llm.py  llm_config.py  llm_usage_reads.py  logging_config.py  masking.py  money.py  sectors.py  symbol_format.py  ui_prefs.py  whatsnew.py  wire.py
portfolio_dash/strategy/: alerts.py  rebalance.py  rules_config.py  signal_states.py  target_weights.py  whatif.py
scripts/: merge_reconcile.py  regen_golden_full.py  seed_demo.py  stamp_asset_version.py  verify_live.py
scripts/probe/: models.py  report.py  run_all.py  runner.py
scripts/stress_audit/: README.md  __init__.py  common.py  oracle.py  phase1.py  phase2.py  run_all.py  run_phase1.py  run_phase2.py  run_phase2_inbox.py  ui.py
tests/: conftest.py  test_bootstrap.py  test_smoke.py
web/: AI Pipeline Hub.html  alerts.js  api.js  app.js  cash.html  cash.js  charts.js  data-center.html  data-center.js  detail.css  detail.js  digest.js  dividend-inbox.html  dividends-card.js  export.js  format.js  history-mock.js  inbox.js  index.html  input.css  input.html  input.js  insights.html  inst-quickadd.js  instruments.html  instruments.js  ledger.html  ledger.js  login.html  names.js  news.html  news.js  pager.js  pipeline-data.js  pipeline-hub.html  pipeline-preflight.js  pipeline-wizard.js  pipeline.css  pipeline.js  rebalance.js  (+25 more)
(+465 files in other folders)
