[project]
name = "portfolio-dash"
version = "0.0.0"
description = "Personal multi-currency, multi-account stock portfolio dashboard"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyxirr>=0.10",
    "yfinance>=0.2.40",
    "FinMind>=1.7",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "ruff>=0.5",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]
probe = [
    "twstock>=1.3",
    "beautifulsoup4>=4.12",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["portfolio_dash*"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
explicit_package_bases = true
files = ["portfolio_dash", "tests", "scripts/probe"]

[[tool.mypy.overrides]]
module = "scripts.probe.adapters.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["yfinance.*", "FinMind.*", "twstock.*", "bs4.*", "pandas.*", "numpy.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "strict"
