[project]
name = "portfolio-dash"
dynamic = ["version"]  # sourced from portfolio_dash.__version__ (single source of truth)
description = "Personal multi-currency, multi-account stock portfolio dashboard"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyxirr>=0.10",
    "yfinance>=0.2.40",
    "FinMind>=1.7",
    "requests>=2.31",
    "litellm>=1.40",
    "APScheduler>=3.10,<4",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    # Runtime provider (TW quote-chain fallback + TW name lookup). Was mis-grouped
    # under the [probe] extra, which silently disabled BOTH on deployed instances
    # (registry/lookup swallow ImportError) — found live 2026-07-02.
    "twstock>=1.3",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "ruff>=0.5",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "freezegun>=1.5",
    "pytest-socket>=0.7",
]
probe = [
    "beautifulsoup4>=4.12",
]
e2e = [
    "playwright>=1.44",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["portfolio_dash*"]

[tool.setuptools.dynamic]
version = { attr = "portfolio_dash.__version__" }

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
explicit_package_bases = true
files = ["portfolio_dash", "tests", "scripts/probe"]

[[tool.mypy.overrides]]
module = "scripts.probe.adapters.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["yfinance.*", "twstock.*", "bs4.*", "pandas.*", "numpy.*", "litellm.*", "apscheduler.*", "uvicorn.*", "pytest_socket.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# no_implicit_reexport (from strict) adds no value here: tests re-export shared helpers
# from tests.conftest, and a few provider modules are monkeypatched at their use-site
# (e.g. finmind_datasets.requests, jobs.ingest). Relax only that one check for these
# modules; every other strict check still applies.
module = [
    "tests.*",
    "portfolio_dash.pricing.finmind_datasets",
    "portfolio_dash.pricing.providers.finmind_provider",
    "portfolio_dash.scheduler.jobs",
]
implicit_reexport = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency-injection markers are intentional calls in argument defaults (B008).
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --disable-socket --allow-unix-socket"
asyncio_mode = "strict"
markers = ["e2e: browser end-to-end (sockets enabled)"]
